--- a/assets/stylesheets/resources/_helpers.scss
+++ b/assets/stylesheets/resources/_helpers.scss
@@ -21,6 +21,8 @@ Text and alignments
   height: 100vh;
 }
 
+.t-center { text-align: center; }
+
 
 /*
 --------------------------------------------------------------------------------
