Fixing beer swiper and grid on toher pages

--- a/assets/stylesheets/blocs/_recommended.scss
+++ b/assets/stylesheets/blocs/_recommended.scss
@@ -49,11 +49,11 @@
             }
         }
 
-        .swiper-container {
+        .scroll-container {
             margin-top: 0;
         }
 
-    .swiper-slide-recommended {
+    .scroll-slide-recommended {
         height: 45rem;
         min-width: 100%;
         width: 100vw;
