--- a/assets/stylesheets/atoms/_scrollbar.scss
+++ b/assets/stylesheets/atoms/_scrollbar.scss
@@ -1,4 +1,4 @@
-::-webkit-scrollbar-track {
+/*::-webkit-scrollbar-track {
 	background-color: $gray-1;
 }
 ::-webkit-scrollbar {
@@ -8,4 +8,4 @@
 
 ::-webkit-scrollbar-thumb {
 	background-color: $gray-5;
-}
+}*/
