--- a/assets/stylesheets/blocs/_beer-specs-card.scss
+++ b/assets/stylesheets/blocs/_beer-specs-card.scss
@@ -44,8 +44,16 @@
         .beer-color {
             width: 1.4rem;
             height: 1.4rem;
-            margin-right: 1.4rem;
+            margin-right: .8rem;
             border-radius: 50%;
+
+            @include phablet {
+                margin-right: 1.4rem;
+            }
+
+            &:last-child {
+                margin-right: 0;
+            }
 
             &:nth-child(1) {
                 background-color: #FDC802;
