--- a/assets/stylesheets/blocs/_news.scss
+++ b/assets/stylesheets/blocs/_news.scss
@@ -3,7 +3,7 @@
     width: 100%;
     overflow: visible;
 
-    &.swiper-container {
+    &.scroll-container {
         margin-top: -4rem;
         position: relative;
         list-style: none;
@@ -14,7 +14,7 @@
         }
     }
 
-    .swiper-wrapper {
+    .scroll-wrapper {
         position: relative;
         width: 100%;
         height: 100%;
@@ -32,12 +32,16 @@
         }
     }
 
-    .swiper-slide {
+    .scroll-slide {
         height: 60vh;
         min-width: 30rem;
         transition-delay: 0.02s;
 
         @include tablet {
+            min-width: 40rem;
+        }
+
+        @include desktop {
             width: 32%;
             min-width: 30rem;
         }
@@ -152,11 +156,3 @@
         }
     }
 }
-
-/*.swiper-container-android .swiper-slide, .swiper-wrapper {
-    transform: translateZ(0);
-}
-
-.card-article-media {
-    z-index: 1;
-}*/
