--- a/assets/stylesheets/pages/_beers.scss
+++ b/assets/stylesheets/pages/_beers.scss
@@ -2,21 +2,17 @@
     background-color: $black;
     height: 100vh;
 
-    .scroll-slider {
-        background-color: $black;
-        position: relative;
-        overflow: hidden;
-        display: block;
+    .swiper-container {
+        width: 100%;
         height: 100vh;
-    }
-
-    .scroll-wrapper {
-        position: relative;
         background-image: url('../../assets/images/beer-vector-texture.png');
         background-position: center;
         background-repeat: repeat-x;
-        background-size: contain;
-        overflow: hidden;
+        background-size: cover;
+    }
+
+    .swiper-wrapper {
+        position: relative;
         display: flex;
         flex-wrap: nowrap;
         height: 100vh;
@@ -28,14 +24,9 @@
         -webkit-tap-highlight-color: transparent;
     }
 
-    .scroll-slide {
-        flex: 1 0 100vw;
+    .swiper-slide {
         display: flex;
         align-items: center;
-
-        @include tablet {
-            flex: 1 0 33.33vw;
-        }
     }
 
     .cover {
@@ -46,7 +37,7 @@
         margin-right: 15vw;      
 
         @include tablet {
-            height: 70vw;
+            height: 60vw;
             margin-left: 6vw;
             margin-right: 6vw;
         }
