--- a/assets/stylesheets/pages/_beers.scss
+++ b/assets/stylesheets/pages/_beers.scss
@@ -4,18 +4,36 @@
 
     .swiper-container {
         width: 100%;
-        height: 100vh;
+        height: 100%;
         background-image: url('../../assets/images/beer-vector-texture.png');
         background-position: center;
         background-repeat: repeat-x;
         background-size: cover;
+
+        .swiper-container-horizontal {
+            > .swiper-scrollbar {
+                position: absolute;
+                left: 5%;
+                bottom: 3rem;
+                z-index: 50;
+                height: 4px;
+                width: 90%;
+                opacity: 1 !important;
+                background: $gray-1;
+
+                .swiper-scrollbar-drag {
+                    background: $gray-3;
+                    border-radius: 2px;
+                }
+            }
+        }
     }
 
     .swiper-wrapper {
         position: relative;
         display: flex;
         flex-wrap: nowrap;
-        height: 100vh;
+        height: 100%;
         box-sizing: border-box;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
