add new community page & fix news swiper conflitcs

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -22,10 +22,12 @@
 'blocs/recommended',
 'blocs/next-page',
 'blocs/beer-specs-card',
+'blocs/tabs',
 
 'pages/beers',
 'pages/single-beer',
 'pages/brewery',
+'pages/community',
 
 'resources/helpers';
 
