--- a/assets/stylesheets/atoms/_button.scss
+++ b/assets/stylesheets/atoms/_button.scss
@@ -5,6 +5,8 @@
   height: 5rem;
   padding: 1.4rem 1.8rem;
   text-transform: uppercase;
+  float: left;
+  text-align: center;
 
   @include tablet {
     min-width: 16rem;
@@ -39,4 +41,11 @@
     background-color: $white;
     color: $dark;
   }
+}
+
+.disabled {
+  color: $gray-4 !important;
+  opacity: .8;
+  pointer-events: none !important;
+  cursor: default;
 }
