--- a/assets/stylesheets/pages/_museum.scss
+++ b/assets/stylesheets/pages/_museum.scss
@@ -5,43 +5,42 @@
 }
 
 .heritage {
-    &-section {
-        background-color: $black;
+  &-section {
+    background-color: $black;
+  }
+
+  &-title {
+    margin-bottom: 5rem;
+  }
+
+  &-info {
+    color: $gray-3;
+  }
+
+  &-beer {
+    position: absolute;
+    right: -15rem;
+    top: 3rem;
+
+    @include tablet {
+      right: -10rem;
+      top: 10rem;
     }
 
-    &-title {
-        margin-bottom: 5rem;
+    @include desktop {
+      right: 10rem;
     }
 
-    &-info {
-        color: $gray-3;
+    @include hd {
+      right: 20rem;
+      top: 8rem;
     }
+  }
 
-    &-beer {
-        position: absolute;
-        right: -15rem;
-        top: 3rem;
-
-        @include tablet {
-            right: -10rem;
-            top: 10rem;
-        }
-
-        @include desktop {
-            right: 10rem;
-        }
-
-        @include hd {
-            right: 20rem;
-            top: 8rem;
-        }
-    }
-    
-
-    &-beer-img {
-        width: 100%;
-        height: 100%;
-    }
+  &-beer-img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .timeline-section {
@@ -52,34 +51,27 @@
     text-align: center;
     padding-top: 5rem;
     z-index: -1;
-    color: rgba($white, .05);
+    color: rgba($white, 0.05);
     background-color: $black;
-
-    /*&:before {
-      content: '';
-      background-color: $black;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }*/
   }
 
   .timeline-surtitle {
-    margin-top: -8rem;
+    margin-top: -4rem;
     text-align: center;
     color: $white;
+
+    @include phablet {
+      margin-top: -8rem;
+    }
   }
 
   &:before {
-      content: '';
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: $black;
-      z-index: -5;
+    content: "";
+    @include position(absolute, 0, 0);
+    width: 100%;
+    height: 100%;
+    background-color: $black;
+    z-index: -5;
   }
 }
 
@@ -88,158 +80,214 @@
   z-index: -2;
   margin-top: 4.4rem;
 
-    &:before {
-      content: '';
-      top: 0;
-      bottom: 0;
-      position: fixed;
-      width: 2px;
-      background-color: #5C502C;
-      left: 50%;
+  img {
+    &.bg-texture {
+      @include position(absolute, 0, 0);
       height: 100%;
-      z-index: -5;
-    }
+      width: 100%;
+      object-position: 90% 50%;
+      object-fit: cover;
+      z-index: -1;
 
+      @include phablet {
+        object-position: 50% 50%;
+      }
+    }
+  }
+
+  &:before,
+  &:after {
+    content: "";
+    @include position(fixed, 0, 0, 0);
+    width: 3px;
+    z-index: -5;
+
+    @include phablet {
+      left: 50%;
+      width: 2px;
+    }
+  }
+
+  &:before {
+    background-color: #5c502c;
+    height: 100%;
+  }
+
+  &:after {
+    background-color: $gold;
+    height: 50vh;
+  }
+
+  .timeline-panel-wrapper {
+    position: relative;
+
+    &:before,
     &:after {
-        content: '';
-        top: 0;
-        bottom: 0;
-        position: fixed;
-        width: 2px;
-        background-color: $gold;
-        left: 50%;
-        height: 50vh;
-        z-index: -5;
+      content: "";
+      display: table;
     }
 
-    .timeline-panel-wrapper {
-        position: relative;
+    .timeline-panel {
+      position: relative;
 
-        &:before, &:after {
-            content: '';
-            display: table;
+      .timeline-panel-body {
+        opacity: 1;
+
+        p {
+          font-size: 1.7rem;
+          color: $gray-3;
+
+          @include desktop {
+            font-size: 2rem;
+          }
+        }
+      }
+
+      &:not(.timeline-panel-img) {
+        &.panel-left {
+          padding: 2rem 3rem 2rem 3rem;
+
+          @include phablet {
+            padding: 2rem 3rem 2rem 5rem;
+          }
+
+          @include desktop {
+            padding: 5rem 0 5rem 8rem;
+          }
         }
 
-        .timeline-panel {
-            position: relative;
+        &.panel-right {
+          padding: 2rem 3rem 2rem 3rem;
 
-            .timeline-panel-body {
-                opacity: 1;
+          @include phablet {
+            padding: 2rem 5rem 2rem 3rem;
+          }
 
-                p {
-                  font-size: 2rem;
-                  color: $gray-3;
-                }
-            }
-
-            &:not(.timeline-panel-img) {
-              &.panel-left {
-                padding: 5rem 0 5rem 8rem;
-              }
-
-              &.panel-right {
-                padding: 5rem 8rem 5rem 0; 
-              }
-
-              .timeline-panel-body {
-                width: 65%;
-                margin: auto;
-              }
-            }
+          @include desktop {
+            padding: 5rem 8rem 5rem 0;
+          }
         }
 
-        .timeline-panel-img {
-          object-fit: contain;
-          padding: 0 8rem; 
+        .timeline-panel-body {
+          width: 100%;
+          margin: auto;
 
-            img {
-              height: auto;
-              max-width: 100%;
-            }
+          @include desktop {
+            width: 65%;
+          }
+        }
+      }
+
+      &:not(.timeline-inverted) {
+        &:before {
+          content: "";
+          position: absolute;
+          top: -3rem;
+          right: 94%;
+          width: 1rem;
+          height: 1rem;
+          border-radius: 50%;
+          background-color: $black;
+          border: 3px solid #5c502c;
+          z-index: 99;
+
+          @include phablet {
+            border-width: 2px;
+            right: -.5rem;
+            top: 0;
+            width: .5rem;
+            height: .5rem;
+          }
         }
 
-        .timeline-inverted {
-            &:before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: -4px;
-                width: 5px;
-                height: 5px;
-                border-radius: 50%;
-                background-color: $black;
-                border: 2px solid #5C502C;
-                z-index: 99;
-            }
-
-            &.active:before {
-                animation-name: ani-img;
-                animation-duration: .5s;
-                animation-delay: .1s;
-                animation-fill-mode: forwards;
-                animation-iteration-count: 1;
-            }
+        &.active:before {
+          animation-name: ani-img;
+          animation-duration: 0.5s;
+          animation-delay: 0.1s;
+          animation-fill-mode: forwards;
+          animation-iteration-count: 1;
         }
-
-        .timeline-badge {
-            color: $dark;
-            width: 100%;
-            padding: 4rem 0;
-            background-color: $black;
-            text-align: center;
-            position: relative;
-            z-index: 100;
-
-            &.active {
-                color: $white;
-                animation-name: lines;
-                animation-duration: 1s;
-                animation-delay: 0s;
-                animation-fill-mode: forwards;
-                animation-iteration-count: 1;
-
-                &:before {
-                animation-name: lines;
-                animation-duration: 1s;
-                animation-delay: 1s;
-                animation-fill-mode: forwards;
-                animation-iteration-count: 1;
-              }
-            }
-        }
-
-        .timeline-inverted, .timeline-inverted>.timeline-panel {
-            float: right;
-        }
+      }
     }
-}
 
+    .timeline-panel-img {
+      object-fit: contain;
+      padding: 0 3rem;
 
-.timeline>.timeline-panel-wrapper:after {
-  clear: both;
-}
+      @include desktop {
+        padding: 0 8rem;
+      }
 
-.timeline-panel.timeline-inverted:before, .timeline-inverted>.timeline-panel:before {
-  left: -6vw;
-  right: auto;
-}
+      img {
+        height: auto;
+        max-width: 100%;
+      }
+    }
 
+    .timeline-badge {
+      color: $dark;
+      width: 100%;
+      padding: 8rem 0 2rem 0;
+      text-align: center;
+      position: relative;
+      z-index: 100;
 
-/***** ANIMATIONS *****/
+      @include phablet {
+        padding: 4rem 0;
+      }
 
-@keyframes animated-line {
-  0% {
-    width: 0px;
+      &:after {
+        @include phablet {
+          content: "";
+          background-color: $black;
+          position: absolute;
+          width: 10rem;
+          height: 11.6rem;
+          top: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          z-index: -1;
+        }
+      }
+
+      &.active {
+        color: $white;
+        animation-name: lines;
+        animation-duration: 1s;
+        animation-delay: 0s;
+        animation-fill-mode: forwards;
+        animation-iteration-count: 1;
+
+        &:before {
+          animation-name: lines;
+          animation-duration: 1s;
+          animation-delay: 1s;
+          animation-fill-mode: forwards;
+          animation-iteration-count: 1;
+        }
+      }
+    }
+
+    .timeline-inverted,
+    .timeline-inverted > .timeline-panel {
+      float: right;
+    }
   }
-  100% {
-    width: 25%;
+
+  .last-wrapper {
+    height: 60vh;
+    background-color: $black;
   }
 }
+
+
+
+/* -------- ANIMATIONS ----------- */
 
 @keyframes ani-img {
   0% {
     transform: scale(1, 1);
-    border-color: #5C502C;
+    border-color: #5c502c;
   }
   50% {
     transform: scale(1.3, 1.3);
@@ -260,86 +308,5 @@
   }
   100% {
     opacity: 1;
-  }
-}
-
-@keyframes ani-body {
-  0% {
-    color: #5C502C;
-  }
-  50% {
-    color: #7390BF;
-  }
-  100% {
-    color: $gold;
-  }
-}
-
-
-@media (max-width: 750px)
-and (-webkit-min-device-pixel-ratio:1)
-  {
-  .connection-line {
-    display: none;
-  }
-  .timeline {
-    padding-top: 50px;
-    margin-left: 0;
-  }
-  .timeline:before {
-    left: 50%;
-    display: none;
-  }
-  .timeline:after {
-    left: 50%;
-    display: none;
-  }
-  .timeline>.timeline-panel-wrapper {
-    padding-bottom: 10%;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-badge {
-    width: 125px;
-    height: 125px;
-    border-radius: 50%;
-    left: 50%;
-    top: 0;
-    margin-bottom: 50px;
-    position: relative;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-panel {
-    width: 100vw;
-    height: 35vh;
-    float: none;
-    left: 0%;
-    background-color: white;
-    z-index: 5;
-    display: block;
-    padding: 5%;
-    height: auto;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-panel.timeline-inverted, .timeline>.timeline-panel-wrapper.timeline-inverted>.timeline-panel {
-    float: none;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-panel::before {
-    display: none;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-panel::after {
-    display: none;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-panel-img::before {
-    display: none;
-  }
-  .timeline>.timeline-panel-wrapper>.timeline-panel-img::after {
-    display: none;
-  }
-  .timeline-title {
-    text-align: center;
-  }
-  .timeline-panel-img img {
-    width: 100%;
-    height: auto;
-    max-width: 90vw;
-    left: auto;
-    right: auto;
   }
 }
