--- a/assets/stylesheets/pages/_museum.scss
+++ b/assets/stylesheets/pages/_museum.scss
@@ -275,7 +275,11 @@
 
 
 
-/* -------- ANIMATIONS ----------- */
+/*
+--------------------------------------------------------------------------------
+Animations
+--------------------------------------------------------------------------------
+*/
 
 @keyframes ani-img {
   0% {
