--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -1,18 +1,3 @@
-
-@mixin show () {
-    display: block;
-}
-
-@mixin hide () {
-    display: none;
-}
-
-@keyframes opacity {
-      0% { opacity: 0; }   
-    100% { opacity: 1; }
-}
-
-
 /*
 --------------------------------------------------------------------------------
 Praxis Logo & Burguer Menu
@@ -28,7 +13,7 @@ Praxis Logo & Burguer Menu
         .navbar-brand {
             background-color: $black;
             position: relative;
-            width: $navbar-height*2;
+            width: $navbar-height * 2;
             height: $navbar-height;
             padding: 2.5rem 3.4rem;
             z-index: 20;
@@ -47,34 +32,36 @@ Praxis Logo & Burguer Menu
             z-index: 20;
 
             &:hover {
-                @include transition(all, .4);
+                @include transition(all, 0.4);
 
                 .bar {
-                    @include transition(all, .3);
+                    @include transition(all, 0.3);
                     width: 4.5rem;
 
                     &:before {
-                        @include transition(all, .4);
+                        @include transition(all, 0.4);
                         width: 4.5rem;
                     }
                 }
             }
 
             .bar {
-                @include transition(all, .3);
+                @include transition(all, 0.3);
                 margin: auto 2.2rem;
                 width: 3rem;
 
-                &, &::before, &::after {
-                    content: '';
+                &,
+                &::before,
+                &::after {
+                    content: "";
                     @include position(absolute, 50%, 0);
-                    @include transition(transform, .4);
+                    @include transition(transform, 0.4);
                     background: $black;
                     height: 3px;
                 }
 
                 &:before {
-                    @include transition(all, .4);
+                    @include transition(all, 0.4);
                     width: 4rem;
                     top: -1rem;
                 }
@@ -84,7 +71,8 @@ Praxis Logo & Burguer Menu
                     top: 1rem;
                 }
 
-                &:before, &:after {
+                &:before,
+                &:after {
                     transform: rotate(0deg);
                 }
             }
@@ -111,7 +99,7 @@ Praxis Logo & Burguer Menu
         }
     }
 
-/*
+    /*
 --------------------------------------------------------------------------------
 Navigation Modal
 --------------------------------------------------------------------------------
@@ -119,7 +107,7 @@ Navigation Modal
 
     .overlay {
         @include position(fixed, 0, 0);
-        @include transition(all, .7);
+        @include transition(all, 0.7);
         background-color: $black;
         width: 100%;
         height: 100%;
@@ -140,11 +128,15 @@ Navigation Modal
             padding: 10rem 2rem 2rem;
 
             @include desktop {
+                padding: 12rem 8rem 10rem 12rem;
+            }
+
+            @include hd {
                 padding: 12rem 8rem 10rem 18rem;
             }
 
             ul {
-                @include transition(all, .7);
+                @include transition(all, 0.7);
                 width: 100%;
 
                 @include desktop {
@@ -152,11 +144,11 @@ Navigation Modal
                 }
 
                 &:hover > li {
-                    opacity: .3;
+                    opacity: 0.3;
                 }
 
                 li {
-                    @include transition(all, .7);
+                    @include transition(all, 0.7);
                     display: flex;
                     flex-direction: column;
 
@@ -175,7 +167,7 @@ Navigation Modal
                             .submenu-link {
                                 @extend h5;
                                 color: $white;
-                                padding-bottom: .8rem;
+                                padding-bottom: 0.8rem;
                             }
                         }
 
@@ -183,7 +175,7 @@ Navigation Modal
                             cursor: pointer;
                         }
                     }
-                    
+
                     .menu-link {
                         @extend h3;
                         color: $white;
@@ -191,12 +183,12 @@ Navigation Modal
                         padding: 1rem 0;
 
                         &.beers-link {
-                            @include transition(all, .7);
+                            @include transition(all, 0.7);
 
                             &:before {
                                 @include desktop {
-                                    @include transition(all, .7);
-                                    content: '';
+                                    @include transition(all, 0.7);
+                                    content: "";
                                     position: absolute;
                                     left: -18rem;
                                     top: 50%;
@@ -228,10 +220,10 @@ Navigation Modal
 
                     &.specials {
                         position: relative;
-                        padding-bottom: .8rem;
+                        padding-bottom: 0.8rem;
 
                         &:before {
-                            content: '';
+                            content: "";
                             position: absolute;
                             left: 0;
                             top: 30%;
@@ -246,18 +238,18 @@ Navigation Modal
                         }
                     }
 
-                    .menu-dropdown, input[type="checkbox"] {
+                    .menu-dropdown,
+                    input[type="checkbox"] {
                         @include hide;
                     }
 
                     ul {
-                        @include transition(all, .7);
+                        @include transition(all, 0.7);
 
                         &.menu-dropdown {
                             padding: 2rem 0;
                         }
                     }
-
                 }
 
                 > li {
@@ -266,11 +258,19 @@ Navigation Modal
                     }
 
                     &.disabled {
-                        opacity: .2 !important;
+                        opacity: 0.2 !important;
                     }
 
                     &:hover .beers-link::before {
-                        width: 120%;
+                        width: 125%;
+
+                        @include hd {
+                            width: 120%;
+                        }
+
+                        @include resolution(1500px) {
+                            width: 116%;
+                        }
                     }
                 }
             }
@@ -282,17 +282,18 @@ Navigation Modal
             }
 
             @media screen and (min-width: 993px) {
-                .beers-link label, input[type="checkbox"] {
+                .beers-link label,
+                input[type="checkbox"] {
                     @include hide;
                 }
-                
+
                 .menu-hasdropdown {
                     position: relative;
 
                     &:hover {
                         > ul {
                             @include show;
-                            animation: opacity .7s ease-out;
+                            animation: opacity 0.7s ease-out;
                         }
                     }
                 }
@@ -323,5 +324,20 @@ Language
                 }
             }
         }
+    }
+}
+
+/*
+--------------------------------------------------------------------------------
+Animations
+--------------------------------------------------------------------------------
+*/
+
+@keyframes opacity {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
     }
 }
