--- a/assets/stylesheets/resources/_palette.scss
+++ b/assets/stylesheets/resources/_palette.scss
@@ -26,7 +26,9 @@ $beer-colors: (
     portuguese-pedro: #E74239,
     pilsener: #E5B257,
     weiss: #E5B257,
-    pumpkin-ale: #EE894F
+    pumpkin-ale: #EE894F,
+    bsda: $dark,
+    dunkel-strong: $dark
 );
 
 $beer-bg: (
@@ -38,7 +40,9 @@ $beer-bg: (
     portuguese-pedro: linear-gradient(153.33deg, rgba(242, 216, 171, 0.6) 21.01%, rgba(230, 195, 136, 0.6) 87.05%),
     pilsener: linear-gradient(153.33deg, rgba(229, 178, 87, 0.4) 21.01%, rgba(208, 145, 32, 0.4) 87.05%),
     weiss: linear-gradient(153.33deg, rgba(229, 178, 87, 0.4) 21.01%, rgba(208, 145, 32, 0.4) 87.05%),
-    pumpkin-ale: linear-gradient(153.33deg, rgba(245, 178, 130, 0.4) 21.01%, rgba(235, 160, 115, 0.4) 87.05%)
+    pumpkin-ale: linear-gradient(153.33deg, rgba(245, 178, 130, 0.4) 21.01%, rgba(235, 160, 115, 0.4) 87.05%),
+    bsda: linear-gradient(167.27deg, #2A2A2A 22.3%, #131313 87.6%),
+    dunkel-strong: linear-gradient(167.27deg, #2A2A2A 22.3%, #131313 87.6%)
 );
 
 
