--- a/assets/stylesheets/pages/_museum.scss
+++ b/assets/stylesheets/pages/_museum.scss
@@ -198,6 +198,7 @@
           z-index: 99;
 
           @include phablet {
+            /*NOT WORKIN*/
             border-width: 2px;
             right: -.5rem;
             top: 0;
@@ -258,6 +259,10 @@
           transform: translateX(-50%);
           z-index: -1;
         }
+      }
+
+      &.active {
+        color: $white;
       }
     }
 
