Shop beer grid finished WIP, buttons still needed

--- a/assets/stylesheets/pages/_community.scss
+++ b/assets/stylesheets/pages/_community.scss
@@ -5,6 +5,12 @@
 
     &.community-news {
         padding-top: 14rem;
+
+        .tabs-navigation {
+            @include phablet {
+                padding: 0 8rem;
+            }
+        }
     }
 
     &.homepage-news {
