--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -23,6 +23,9 @@
 'blocs/next-page',
 'blocs/beer-specs-card',
 'blocs/tabs',
+'blocs/db-title',
+'blocs/swiper-slide',
+'blocs/gallery',
 
 'pages/beers',
 'pages/single-beer',
